@@ -1,4 +1,8 @@
-﻿shmuel 23.08.2014 03:11:07 +0200 - build 415
+﻿shmuel 23.08.2014 09:43:48 +0200 - build 416
+
+1. Уточнение 414.
+
+shmuel 23.08.2014 03:11:07 +0200 - build 415
 
 1. Поддержка UTF-8 BOM в luamacro.ini.
 
